# sentinel-kyc

./: .gitignore  Caddyfile  Dockerfile  README.md  STUDENT_GUIDE.md
backend/: .gitignore  gen_schema.py  pyproject.toml  requirements.txt
backend/app/: conftest.py  database.py  main.py  models.py  seed.py
backend/app/routes/: activity.py  ai.py  alerts.py  cases.py  customers.py  dashboard.py  documents.py  reports.py  search.py  stats.py
e2e/: package.json  playwright.config.ts
e2e/fixtures/: test-helpers.ts
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ApiKeyDialog.tsx
frontend/src/components/layout/: AppShell.tsx  GlobalSearch.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/pages/: AlertDetailPage.tsx  AlertsPage.tsx  CaseDetailPage.tsx  CasesPage.tsx  CustomerDetailPage.tsx  CustomersPage.tsx  DashboardPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  ReportsPage.tsx
frontend/src/styles/: globals.css
