[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Select rules - errors + important warnings
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # Line too long (formatter handles this)
    "B008",   # Do not perform function calls in argument defaults (FastAPI uses this)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
exclude = ["**/__pycache__", ".venv"]
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["app"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=json --cov-fail-under=50"

[tool.coverage.run]
source = ["app"]
omit = ["app/test_*.py", "app/**/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
